# LLM_Scene_Docker

./: Dockerfile  README.md  rebuild_container.sh  startOllama.sh  start_docker.sh
object_detector_tensorflow_interfaces/install/: local_setup.sh  setup.sh
object_detector_tensorflow_interfaces/log/: latest_build
src/: Detections_Class_Name.txt
src/llm_action_interfaces/: CMakeLists.txt  package.xml
src/llm_action_interfaces/action/: LLM.action
src/llm_action_interfaces/msg/: SolutionFeedback.msg
src/llm_docker/: package.xml  setup.py
src/llm_docker/install/: local_setup.sh  setup.sh
src/llm_docker/llm_files/: DetectionSubscriber.py  Formatter.py  Json_test.py  MainLLM.py  PostProcessing.py  PreProcessing.py  ollama_test.py  previousTries.py
src/llm_docker/log/: latest_build
src/llm_interfaces/: CMakeLists.txt  package.xml
src/llm_interfaces/msg/: CylinderCombination.msg  Package.msg
src/llm_interfaces/srv/: PackItems.srv  SceneInterpretation.srv  SetGetAllTypes.srv  UserInteraction.srv  WebsiteFeedback.srv
src/log/: latest_build
src/object_detector_tensorflow_interfaces/srv/: YAML.srv
src/pkg_llm_docker/: package.xml  setup.cfg  setup.py
src/pkg_llm_docker/pkg_llm_docker/: Detection.py  DetectionSubscriber.py  Detections_Class_Name.txt  LLM_Action_Server.py  MainLLM.py  OllamaInteraction.py  PostProcessing.py  PreProcessing.py  TEST.py  fakeOdtf.py  material_master.yaml  my_llm_node.py  shared.py
src/pkg_pack_item_server/: package.xml  setup.cfg  setup.py
src/pkg_pack_item_server/install/: local_setup.sh  setup.sh
src/pkg_pack_item_server/log/: latest_build
src/pkg_pack_item_server/pkg_pack_item_server/: SelectedItemsToPack.py  pack_item_server.py  (+1 more)
src/pkg_website_llm/: package.xml  setup.cfg  setup.py
src/r2e_demos/: setup.py
(+122 files in other folders)
